--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -22,17 +22,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "id": "s07c7JK7Oqt-"
+    "id": "s07c7JK7Oqt-",
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Hi', 'there', 'Sam!']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = \"Hi there Sam!\"\n"
    ]
@@ -69,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "_ZHoml3kPqic"
    },
@@ -120,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "id": "MvbkMZpXYRaw"
    },
@@ -131,12 +124,13 @@
        "'hello'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "d['k1'][3]['tricky'][3]['target'][3]"
    ]
   },
@@ -151,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "LLiE_TYrhA1O"
    },
@@ -172,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "id": "NHrirmgCYXvU"
    },
@@ -183,7 +177,7 @@
        "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "id": "e4005lsTYXxx"
    },
@@ -206,7 +200,7 @@
        "array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5.])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {
     "id": "xNpI_XXoYhs0"
    },
@@ -381,18 +375,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -400,17 +394,18 @@
       ],
       "text/plain": [
        "   0  1\n",
-       "0  1  4\n",
-       "1  6  6\n",
-       "2  7  2"
+       "0  5  1\n",
+       "1  1  4\n",
+       "2  0  6"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "B=np.random.randint(10,size=(3,2))\n",
     "df=pd.DataFrame(B)\n",
     "df"
@@ -427,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {
     "id": "dgyC0JhVYl4F"
    },
@@ -449,7 +444,7 @@
        "              dtype='datetime64[ns]', freq='D')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {
     "id": "knH76sDKYsVX"
    },
@@ -546,15 +541,37 @@
        "2  3  ccc  24"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "df=pd.DataFrame(lists)\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
