--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -22,17 +22,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "id": "s07c7JK7Oqt-",
-    "scrolled": false
+    "id": "s07c7JK7Oqt-"
    },
    "outputs": [],
    "source": [
-    "s = \"Hi there Sam!\"\n"
+    "s = \"Hi there Shanthana!\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "id": "6mGVa3SQYLkb"
    },
@@ -41,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hi', 'there', 'Sam!']\n"
+      "['Hi', 'there', 'Shanthana!']\n"
      ]
     }
    ],
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "_ZHoml3kPqic"
    },
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "HyRyJv6CYPb4"
    },
@@ -102,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "fcVwbCc1QrQI"
    },
@@ -130,7 +129,6 @@
     }
    ],
    "source": [
-    "\n",
     "d['k1'][3]['tricky'][3]['target'][3]"
    ]
   },
@@ -166,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "id": "NHrirmgCYXvU"
    },
@@ -177,7 +175,7 @@
        "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "id": "e4005lsTYXxx"
    },
@@ -200,7 +198,7 @@
        "array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "id": "oAI2tbU2Yag-"
    },
@@ -232,7 +230,7 @@
        "array([20, 22, 24, 26, 28, 30, 32, 34])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "id": "tOlEVH7BYceE"
    },
@@ -266,7 +264,7 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "id": "rAPSw97aYfE0"
    },
@@ -299,7 +297,7 @@
        "array([1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "T5OxJRZ8uvR7"
    },
@@ -342,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {
     "id": "xNpI_XXoYhs0"
    },
@@ -375,18 +373,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -394,18 +392,17 @@
       ],
       "text/plain": [
        "   0  1\n",
-       "0  5  1\n",
-       "1  1  4\n",
-       "2  0  6"
+       "0  0  8\n",
+       "1  7  3\n",
+       "2  7  9"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "B=np.random.randint(10,size=(3,2))\n",
     "df=pd.DataFrame(B)\n",
     "df"
@@ -422,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {
     "id": "dgyC0JhVYl4F"
    },
@@ -444,7 +441,7 @@
        "              dtype='datetime64[ns]', freq='D')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "_XMC8aEt0llB"
    },
@@ -480,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {
     "id": "knH76sDKYsVX"
    },
@@ -541,37 +538,15 @@
        "2  3  ccc  24"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "df=pd.DataFrame(lists)\n",
     "df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
